--- a/assets/css/style_3.css
+++ b/assets/css/style_3.css
@@ -1,29 +1,42 @@
-h2{
+/*Main*/
+    h2{
+        text-align: center;
+    }
+    /* Div contenant le Calendrier */
+        #calendrier{
+            display: flex;
+            padding-left: 60px;
+            padding-right: 60px;
+        }
+            #calendrier img{
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+        /*Colone Liste dates*/
+            #sideDates{
+                position: relative;
+                top :70px;
+                height: 747px;
+                margin-left: 60px;
+                background-color: grey;
+            }
+
+                #sideDates h3{
+                    text-align: center;
+                }
+
+                #sideDates ul li{
+                    text-align: center;
+                }
+        /*Colone Liste dates*/
+
+    /* Div contenant le Calendrier */
+
+/*Main*/
+
+/*Footer*/
+footer p{
     text-align: center;
 }
-/* Div contenant le Calendrier */
-#calendrier{
-    display: flex;
-    padding-left: 60px;
-    padding-right: 60px;
-}
-    #calendrier img{
-        margin-left: auto;
-        margin-right: auto;
-    }
-    /*Colone Liste dates*/
-    #sideDates{
-        background-color: grey;
-        padding-top: 67.8px;
-
-    }
-
-        #sideDates h3{
-            text-align: center;
-            
-        }
-        #sideDates ul li{
-            text-align: center;
-        }
-    /*Colone Liste dates*/
-/* Div contenant le Calendrier */
+/*Footer*/
