correction du bug du chargement du fichier js

--- a/assets/css/style_0.css
+++ b/assets/css/style_0.css
@@ -7,6 +7,6 @@ body
 {
     color:black;
     background-color: red;
-    background: url("assets/img/fond_jaune.png");
+    background: url("../img/fond_jaune.png");
 
 }
