--- a/assets/css/style_0.css
+++ b/assets/css/style_0.css
@@ -3,10 +3,11 @@ h1 {
     text-align: center;
 }
 
+/*image de fond pour le site web*/
 body
 {
     color:black;
-    background-color: red;
+    background-color:white;
     background: url("../img/fond_jaune.png");
 
 }
