--- a/assets/css/style_0.css
+++ b/assets/css/style_0.css
@@ -1,13 +1,50 @@
-h1 {
-    color: red;
-    text-align: center;
-}
+
 
 /*image de fond pour le site web*/
-body
-{
+body {
     color:black;
     background-color:white;
     background: url("../img/fond_jaune.png");
+}
 
+header
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+#titre_principal
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+#logo
+{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+}
+
+#logo img
+{
+    width: 59px;
+    height: 60px;
+}
+
+header h1
+{
+    font-size: 2.5em;
+    font-weight: normal;
+    margin: 0 0 0 10px;
+}
+
+header h2
+{
+    font-size: 1.1em;
+    margin-top: 0px;
+    font-weight: normal;
 }
