--- a/assets/css/style_1.css
+++ b/assets/css/style_1.css
@@ -198,6 +198,7 @@
     background-color: #555;
 }
 
-body {
-    background-image: url(../img/background.jpg);
+#amplitude-album-art {
+    background-image: url(../img/photo2.jpg);
+    background-size: cover;
 }
