--- a/assets/css/style_3.css
+++ b/assets/css/style_3.css
@@ -17,7 +17,7 @@ body{
 
 #s0 p{
     
-    background-color:rgba(0,0,0,0.3);
+    background-color:rgba(0, 0, 0, 0.137);
     color: white;
     text-align: center;
 }
