--- a/assets/css/style_pageprotegee.css
+++ b/assets/css/style_pageprotegee.css
@@ -1,5 +1,5 @@
 h1 {
-    color: royalblue;
+    color: red;
     text-align: center;
 }
 
@@ -19,4 +19,15 @@ td, th {
     padding: 5px;
     }
 
- 
+
+/*pour cacher le formulaire permettant de supprimer un message*/
+.cache {
+    display:none;
+}
+
+.delete:hover 
+{
+    color: white;
+    background-color:red;
+    box-shadow: none;
+}
