--- a/assets/css/style_0.css
+++ b/assets/css/style_0.css
@@ -22,7 +22,7 @@ header
     padding:25px;
     height:100px;
     transition: all 0.5s linear;
-    background: url("../img/fond_jaune.png");
+    background-color:#181616;
     z-index: 999 ;
 }
 
@@ -87,7 +87,7 @@ nav li
 nav a
 {
     font-size: 1.3em;
-    color: #181818;
+    color: white;
     padding-bottom: 3px;
     text-decoration: none;
 }
@@ -95,7 +95,7 @@ nav a
 
 nav a:hover
 {
-    color: #760001;
-    border-bottom: 3px solid #760001;
+    color: #f1393c;
+    border-bottom: 3px solid #f1393c;
 }
 
