--- a/assets/css/style_2.css
+++ b/assets/css/style_2.css
@@ -1,7 +1,7 @@
 /*couleur de fond et mise en page du formulaire*/
 #formulaire-contact
 {
-    background-color:grey;
+    background-color:#181616;
     padding: 15px;   
     margin-bottom: 5px;
     border-radius: 5px;
@@ -16,6 +16,19 @@ form
     align-items: center;
 }
 
+h1{
+    color: white;   
+}
+
+h2{
+    text-align: center;
+    color: white;   
+}
+
+label 
+{
+    color:white;
+}
 /*bouton de validation du formulaire*/
 form button 
 {
@@ -53,7 +66,7 @@ input, textarea
     background-color: white;
     color: #787575;
     border-radius: 5px;
-    width: 25%;
+    width: 75%;
     outline: none;
     text-align: center;
 }
