correction des ancres

--- a/assets/css/style_0.css
+++ b/assets/css/style_0.css
@@ -64,9 +64,10 @@ header h2
 }
 
 section {
+    padding-top: 130px;
     margin-right: 0;
     margin-left: 0;
-    margin-bottom: 140px;
+    margin-bottom: 70px;
 }
 
 
