--- a/assets/css/style_3.css
+++ b/assets/css/style_3.css
@@ -46,22 +46,25 @@ table{
     width: 100%;
 }
 
-.listDate tr{
+.listeDate tr{
     width:100%;
     display: flex;
     flex-direction: row;
 }
 
-.listDate tr td{
+.listeDate tr td{
     width: calc(100%/5);
 }
 .adresses{
     width: calc((100%/5)*2) !important;
+
 }
 
 #titres td{
     font-size: large;
     font-weight: bold;
+    padding-bottom: 15px;
+    border-bottom: 1px solid white;
 }
 /*Main*/
 
