--- a/assets/css/style_0.css
+++ b/assets/css/style_0.css
@@ -63,7 +63,7 @@ header h2
     font-weight: normal;
 }
 
-section {
+.navigation {
     padding-top: 130px;
     margin-right: 0;
     margin-left: 0;
