--- a/assets/css/style_1.css
+++ b/assets/css/style_1.css
@@ -208,6 +208,7 @@ footer {
     color: var(--light);
     text-align: center;
     padding: 1rem;
+    margin-top: 1000px;
 }
 
 @media (min-width: 1300px) {
