--- a/assets/css/style_3.css
+++ b/assets/css/style_3.css
@@ -1,14 +1,203 @@
+@media only screen and (max-width:600px){
+/*Header*/
+
+header{
+display: flex;
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+opacity: 1;
+padding: 25px 0px;
+height: 100px;
+transition: all 0.5s linear;
+background-color: #181616;
+z-index: 999;
+flex-direction: column;
+}
+    #logo img{ 
+        position: absolute;
+        max-height: 56px;
+        bottom: 80px;
+        left: 2%;
+    }
+
+    nav{
+        max-width: 100vw;
+        padding-top: 20px;
+    }
+    nav ul{
+        list-style-type: none;
+        display: flex;
+        padding: 0px;
+        width: 100%;
+        justify-content: space-around;
+    }
+
+    nav li{
+        margin:0;
+        font-size: small;
+    }
+
+/*Header*/
+
+    body{
+        background-color: black;
+        margin:0;
+    
+    }
+    
+    #backgroundImg{
+        position: absolute;
+        margin-top: 150px;
+        max-width: 100vw;
+        content: cover;
+    }
+/*Main*/  
+    .navigation{
+        padding-top:10px;
+        margin-right: 0;
+        margin-left: 0;
+    }
+    /*Présentation*/  
+
+    .content{
+        position: absolute;
+        top: 140px;
+        max-width: 96%;
+        z-index: 99;
+        margin: 0 auto;
+    
+    }
+    
+    #s0{
+        margin-top: 130px;
+    }
+    
+    #s0 h2{
+        text-align: center;
+        color: white;   
+    }
+    
+    #s0 p{
+        
+        background-color:rgba(0, 0, 0, 0.137);
+        color: white;
+        text-align: center;
+    }
+
+    /*Présentation*/
+
+    /*Titres*/
+    header h1{
+        position: absolute;
+        font-size: 2em;
+        top: 18px;
+        left: 11%;
+}
+    h3{
+        text-align: center;
+    }
+    /*Titres*/ 
+
+    /* Div contenant les dates de concerts */
+    #listeConcerts{
+        background-color: #181616;
+        color: white;
+        text-align: center;
+        padding: 15px;
+        margin-bottom: 5px;
+        border-radius: 5px;
+    }
+    
+    table{
+        width: 100%;
+    }
+    
+    .listeDate tr{
+        width:100%;
+        display: flex;
+        flex-direction: row;
+    }
+    
+    .listeDate tr td{
+        width: calc(100%/5);
+    }
+    .adresses{
+        width: calc((100%/5)*2) !important;
+    
+    }
+    
+    #titres td{
+        font-size: large;
+        font-weight: bold;
+        padding-bottom: 15px;
+        border-bottom: 1px solid white;
+    }
+    /* Div contenant les dates de concerts */
+    
+    /*Main*/
+    
+    /*Footer*/
+    footer{
+    width: 100%;
+    position: absolute;
+    text-align: center;
+    top: 1964px;
+    right: 0px;
+    margin: 0 auto;;
+    }
+
+    footer a{
+        text-decoration: none;
+        color: white;
+    }
+    /*Footer*/
+
+    /*Page Legal*/
+    #legal{
+
+        background-color: grey;
+        margin-top: 150px;
+        padding: 20px;
+        border-radius: 5px;
+            }
+    /*Page Legal*/    
+}
+
+@media only screen and (min-width: 601px){
 body{
     background-color: black;
     margin:0;
+    display: flex;
+    flex-direction: column;
 
 }
+
+/*Header*/
+
+header{
+display: flex;
+justify-content: space-between;
+align-items: flex-end;
+}
+
+/*Header*/
 #backgroundImg{
+    position: absolute;
     margin-top: 150px;
-    max-width: 100%;
-    content: cover;}
+    max-width: 100vw;
+    content: cover;
+
+}
+
+
+
 
 /*Présentation*/
+#s0{
+    margin-top: 0px;
+}
 
 #s0 h2{
     text-align: center;
@@ -23,14 +212,17 @@ body{
 }
 
 .content{
-    position: absolute;
-    height: max-content;
+
+
     top: 140px;
     max-width: calc(100%/3);
     right: calc(100%/3);
+    z-index: 99;
+    margin: 0 auto;
 }
 
 /*Présentation*/
+
 /*Main*/
 
 /* Div contenant les dates de concerts */
@@ -70,9 +262,14 @@ table{
 /*Main*/
 
 /*Footer*/
-footer p{
+footer{
+    margin: 0 auto;
+
+}
+footer a{
     text-align: center;
     text-decoration: none;
     color: white;
 }
 /*Footer*/
+}
